Edit 2 files in MVC for deployement in Azure

--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -7,9 +7,14 @@
   },
   "AllowedHosts": "*",
 
+  /*
   "ConnectionStrings": {
-    "ValaisDB": "Server=PR\\MSSQLSERVER2019;Database=Production;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  }
+    "DefaultConnection": "Server=PR\\MSSQLSERVER2019;Database=Production;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },*/
 
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:produc-server.database.windows.net,1433;Initial Catalog=Production;Persist Security Info=False;User ID=Matthias;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 
 }
