--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ValaisDB": "Server=PR\\MSSQLSERVER2019;Database=Production;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
