Add two test projects and dependencies

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -11,4 +11,6 @@
     "ValaisDB": "Server=MATTHIASGAILLAR\\SQLSERVERDATAEXP;Database=Production;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
+  //MATTHIASGAILLAR\\SQLSERVERDATAEXP
+
 }
