--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,9 +8,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ValaisDB": "Server=PR\\MSSQLSERVER2019;Database=Production;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  },
+    "ValaisDB": "Server=MATTHIASGAILLAR\\SQLSERVERDATAEXP;Database=Production;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 
+
+  //PR\\MSSQLSERVER2019
   //MATTHIASGAILLAR\\SQLSERVERDATAEXP
 
 }
